--- a/employers_list/index.html
+++ b/employers_list/index.html
@@ -11,7 +11,7 @@
 <body>
   <section class="main">
     <div class="container">
-      <h1>Сотрудники</h1>
+      <h1>Сотрудники и сотрудницы</h1>
 
       <form action="" id="add-worker">
         <div class="mb-3">
