--- a/student_list/index.html
+++ b/student_list/index.html
@@ -5,12 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список студентов</title>
     <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
     <section class="main">
         <div class="container">
             <h1>Спосок студентов</h1>
+
+            <form id="search" class="mb-3">
+              <div class="row mb-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="ФИО" id="filter-fio">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Факультет" id="filter-faculty">
+                </div>
+                <div class="col">
+                  <input type="number" class="form-control" placeholder="Год начала обучения" id="filter-study_start">
+                </div>
+                <div class="col">
+                  <input type="number" class="form-control" placeholder="Год окончания обучения" id="filter-study_end">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary">Поиск</button>
+            </form>
+            <button id="filter-cancel" type="" class="hidden btn btn-primary" style="background-color: red;">Сброс</button>
 
             <form action="" id="add-student">
                 <p>Все поля обязытельны для заполнения*</p>
@@ -27,11 +46,12 @@
                   <input class="form-control" type="number" placeholder="Начало учёбы" id="input-studyingStart" >
                 </div>
                 <div class="mb-3">
-                  <input class="form-control" type="date" placeholder="Дата рождения" id="input-birtDate" >
+                  <input class="form-control" type="date" placeholder="Дата рождения" id="input-birthDate" >
                 </div>
                 <div class="mb-3">
                   <input class="form-control" type="text" placeholder="Факультет" id="input-faculty" >
                 </div>
+                <div class="errors" id="errors"></div>
                 <button class="btn btn-primary mb-3">Добавить</button>
             </form>
            
