--- a/student_list/index.html
+++ b/student_list/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="main">
         <div class="container">
-            <h1>Спосок студентов</h1>
+            <h1>Список студентов</h1>
 
             <form action="" id="add-student">
                 <p>Все поля обязытельны для заполнения*</p>
