--- a/client-server-master-todo-server/todo-frontend/mom.html
+++ b/client-server-master-todo-server/todo-frontend/mom.html
@@ -5,11 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script defer src="todoApp.js"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                createTodoApp(document.getElementById('todo-app'), 'Дела мамы', 'мама')
-            })
+        <script type="module">
+            import { initializeApp } from './todo-app/view.js';
+            document.addEventListener('DOMContentLoaded', initializeApp('Дела мамы', 'Мама'));
         </script>
     </head>
     <body>
